For empty MedicalHistoryList mapper return empty list now